Add hover style

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <div class="container">
     <div class="main">
-      <img src="./images/image-equilibrium.jpg" alt="image-equilibrium">
+      <img class="main-img" src="./images/image-equilibrium.jpg" alt="image-equilibrium">
 
       <h3>
         Equilibrium #3429
